# DRF-Base-Structure

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt
.github/workflows/: django.yml
config/: settings.py  urls.py
